# hulot

./: .gitignore  Makefile  README.md  cv  cv.py  mimeinfo  mimetype  pyproject.toml  tox.ini
MIME/: Convert.pm
MIME/converters/: application_pdf→application_postscript  application_vnd.ms-excel→text_csv  application_vnd.openxmlformats-officedocument.spreadsheetml.sheet→text_csv  audio_*→audio_mpeg  image_x-epoc-sketch→image_*  text_source→text_html  text_x-tex→application_pdf  text_x-tex→text_html  x-epoc-sketch→image_*
MIME/old converters/: ogg2mp3
hulot/: __init__.py  __main__.py
hulot/converters/: application_pdf→application_postscript  ffmpeg-mp4  highlight  id  libreoffice  ls  python-pygments  text_x-tex→application_pdf  text_x-tex→text_html  video_x-m4v→video_mp4
mime_convert/: __init__.py
mime_convert/converters/: ls  text_markdown→text_html
old converters/: flac2ogg  latex2html.pl  mp4tomp3
