[project]
name = "hulot"
version = "0.1.4"
description = "Convert files between different MIME types"
license = {text = "GPL v3 or later"}
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/Hulot"}
requires-python = ">= 3.9"
dependencies = [
    "python-magic",
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

[project.scripts]
hulot = "hulot:main"
hulot-converters = "hulot:mime_converters"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]

[tool.mypy]
exclude = [
    '^dist',
    '^build',
]
strict = true

[tool.pylint.main]
# Use multiple processes to speed up Pylint: 0 = auto-detect.
jobs = 0

[tool.pylint.MASTER]
init-hook = 'import sys; sys.path.append(".")'

[tool.pylint.format]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "fixme",
    "global-statement",
]
enable = [
    "useless-suppression",
]
